<resources>
    <string name="app_name">Sprinkle</string>
    <string name="mobile_number">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_name">Name (Min. 3 characters)</string>
    <string name="address">Delivery Address</string>
    <string name="choose_password">Password (Min. 4 characters)</string>
    <string name="registration">Register</string>
    <string name="Open_Drawer">Open Drawer</string>
    <string name="Close_drawer">Close Drawer</string>
    <string name="register_yourself">
        <u>Don\'t have an account? Sign up now</u>
    </string>
    <string name="forgot_password">
        <u>Forgot Password?</u>
    </string>
    <string name="email">Email Address</string>
    <string name="enter_mobile_forgot_password">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="navigation_drawer">Express Food</string>
    <string name="home">Home</string>
    <string name="favourites">My Favourite Restaurants</string>
    <string name="profile">My Profile</string>
    <string name="faq">FAQs</string>
    <string name="user_shared_preferences">User Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="logout">LOG OUT</string>
    <string name="order_history">Order History</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:-</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="ordering_from">Ordering From :</string>
    <string name="ok">OK</string>
    <string name="success">Your order has been successfully placed!!</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="reset">RESET</string>
</resources>
